--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
-2004-02-23  Niels Möller  <niels@s3.kth.se>
+2021-01-05  Wolf Vollprecht  <w.vollprecht@gmail.com>
+
+	* Remove autotools build system and use meson
+
+2004-02-23  Niels MÃ¶ller  <niels@s3.kth.se>
 
 	* configure.ac: Bumped version to standalone-1.3.
 
@@ -10,24 +14,24 @@
         variables, otherwise on Darwin linking fails if the user does not
         define these variables.
 
-2003-04-28  Niels Möller  <nisse@cuckoo.hack.org>
+2003-04-28  Niels MÃ¶ller  <nisse@cuckoo.hack.org>
 
 	* argp-parse.c: Use standard alloca blurb from the autoconf
 	manual. 
 	* argp-help.c: Updated alloca blurb to use the same as
 	argp-parse.c. 
 
-2003-04-24  Niels Möller  <niels@s3.kth.se>
+2003-04-24  Niels MÃ¶ller  <niels@s3.kth.se>
 
 	* argp.h: Added workaround for __restrict.
 
-2003-03-13  Niels Möller  <nisse@cuckoo.hack.org>
+2003-03-13  Niels MÃ¶ller  <nisse@cuckoo.hack.org>
 
 	* Released argp-standalone-1.2.
 
 	* Updated copyright years.
 
-2003-03-03  Niels Möller  <nisse@cuckoo.hack.org>
+2003-03-03  Niels MÃ¶ller  <nisse@cuckoo.hack.org>
 
 	* argp-fmtstream.h: Don't include config.h here, let the .c-files
 	do that. Deleted definition of PRINTF_STYLE, that's in config.h.
@@ -36,7 +40,7 @@
 	underlying functions are really macros defined by stdio. For
 	example on freebsd. Updated the files using these functions.
 
-2003-03-02  Niels Möller  <nisse@cuckoo.hack.org>
+2003-03-02  Niels MÃ¶ller  <nisse@cuckoo.hack.org>
 
 	* argp-help.c: Don't include malloc.h. If any system still needs
 	it, we need a configure test for it. 
@@ -48,27 +52,27 @@
 	* configure.ac: Use LSH_GCC_ATTRIBUTES. Deleted the definition of
 	UNUSED from the files that used it, it's now in config.h.
 
-2003-02-16  Niels Möller  <nisse@cuckoo.hack.org>
+2003-02-16  Niels MÃ¶ller  <nisse@cuckoo.hack.org>
 
 	* argp-fmtstream.h: When disabling fwrite_unlocked, #undef it first.
 
 	* testsuite/permute-test: diff -q is not portable.
 	Redirect to /dev/null instead.
 
-2003-02-12  Niels Möller  <niels@s3.kth.se>
+2003-02-12  Niels MÃ¶ller  <niels@s3.kth.se>
 
 	* argp-fmtstream.h: When disabling putc_unlocked, #undef it first.
 
-2003-02-10  Niels Möller  <niels@s3.kth.se>
+2003-02-10  Niels MÃ¶ller  <niels@s3.kth.se>
 
 	* configure.ac (ARGP_CHECK_FUNC): Use AS_VAR_GET. Use AH_TEMPLATE.
 
-2003-02-10  Niels Möller  <nisse@cuckoo.hack.org>
+2003-02-10  Niels MÃ¶ller  <nisse@cuckoo.hack.org>
 
 	* configure.ac (ARGP_CHECK_FUNC): New macro. Use it to test for
 	putc_unlocked. 
 
-2003-02-05  Niels Möller  <nisse@lysator.liu.se>
+2003-02-05  Niels MÃ¶ller  <nisse@lysator.liu.se>
 
 	* argp-parse.c (argp_default_options): Fixed initializer.
 	* argp-test.c (options): Likewise.
@@ -80,7 +84,7 @@
 
 	* .bootstrap: New file.
 
-2003-02-05  Niels Möller  <niels@s3.kth.se>
+2003-02-05  Niels MÃ¶ller  <niels@s3.kth.se>
 
 	* Makefile.am (all): Deleted the explicit all target.
 	(LIBOBJS): Added explicit substitution.
@@ -113,7 +117,7 @@
 
 	* acinclude.m4: Deleted file.
 
-2003-02-04  Niels Möller  <nisse@cuckoo.hack.org>
+2003-02-04  Niels MÃ¶ller  <nisse@cuckoo.hack.org>
 
 	* configure.ac: Bumped version to standalone-1.2.
 
@@ -134,17 +138,17 @@
 	* testsuite/ex1.c, testsuite/ex3.c,
 	testsuite/ex4.c:  Added glibc example programs.
 
-2002-07-18  Niels Möller  <niels@s3.kth.se>
+2002-07-18  Niels MÃ¶ller  <niels@s3.kth.se>
 
 	* configure.ac: Don't use -ggdb3 with gcc-2.96.
 
-2002-05-06  Niels Möller  <niels@s3.kth.se>
+2002-05-06  Niels MÃ¶ller  <niels@s3.kth.se>
 
 	* configure.ac: Use AH_TEMPLATE for
 	PROGRAM_INVOCATION_NAME and PROGRAM_INVOCATION_SHORT_NAME. The
 	third arg to AC_DEFINE_UNQUOTED seems not to work here. 
 
-2002-05-05  Niels Möller  <nisse@lysator.liu.se>
+2002-05-05  Niels MÃ¶ller  <nisse@lysator.liu.se>
 
 	* acconfig.h: Deleted file.
 
@@ -157,25 +161,25 @@
 	* configure.ac: Update for automake-1.6.
 	* configure.ac: Renamed file, used to be configure.in.
 	
-2001-03-26  Niels Möller  <nisse@cuckoo.localdomain>
+2001-03-26  Niels MÃ¶ller  <nisse@cuckoo.localdomain>
 
 	* configure.in: Bumped argp version to standalone-1.1. 
 
-2001-03-26  Niels Möller  <nisse@ehand.com>
+2001-03-26  Niels MÃ¶ller  <nisse@ehand.com>
 
 	* configure.in (CPPFLAGS): Added -D_GNU_SOURCE.
 
-2001-02-18  Niels Möller  <nisse@cuckoo.localdomain>
+2001-02-18  Niels MÃ¶ller  <nisse@cuckoo.localdomain>
 
 	* argp-parse.c (argp_default_parser): Let OPT_HANG print
 	the process id to stderr.
 
-2001-01-15  Niels Möller  <nisse@ehand.com>
+2001-01-15  Niels MÃ¶ller  <nisse@ehand.com>
 
 	* argp.h: #define PRINTF_STYLE, and use it instead of
 	using __attribute__ directly.
 
-2001-01-07  Niels Möller  <nisse@cuckoo.localdomain>
+2001-01-07  Niels MÃ¶ller  <nisse@cuckoo.localdomain>
 
 	* argp.h: Added _argp_short_program_name and
 	__argp_short_program_name. 
@@ -184,11 +188,11 @@
 	argp_short_program_name. 
 	(parser_parse_next): Removed old permutation handling code. 
 
-2001-01-06  Niels Möller  <nisse@cuckoo.localdomain>
+2001-01-06  Niels MÃ¶ller  <nisse@cuckoo.localdomain>
 
 	* argp-namefrob.h: Added _argp_short_program_name.
 
-2001-01-02  Niels Möller  <nisse@cuckoo.localdomain>
+2001-01-02  Niels MÃ¶ller  <nisse@cuckoo.localdomain>
 
 	* argp-help.c (hol_entry_help): Avoid using a
 	non-constant struct initializer.
@@ -203,7 +207,7 @@
 	inline definitions in argp-fmtstream.h, for compilers that don't
 	do inlining.
 
-2000-12-28  Niels Möller  <nisse@cuckoo.localdomain>
+2000-12-28  Niels MÃ¶ller  <nisse@cuckoo.localdomain>
 
 	* argp-help.c (fill_in_uparams): Use unsigned char * for
 	VAR and ARG. Fixed calls of isalnum, isspace and friends, reported
@@ -213,13 +217,13 @@
 	(hol_entry_cmp): Fixed calls of tolower, reported by Kalle Olavi
 	Niemitalo.
 
-2000-12-23  Niels Möller  <nisse@lysator.liu.se>
+2000-12-23  Niels MÃ¶ller  <nisse@lysator.liu.se>
 
 	* acinclude.m4: New file. 
 	* acinclude.m4: Reverted the definition of AC_CHECK_VAR
 	to take includes as argument, and renamed it to ARGP_CHECK_VAR.
 
-2000-12-11  Niels Möller  <nisse@cuckoo.localdomain>
+2000-12-11  Niels MÃ¶ller  <nisse@cuckoo.localdomain>
 
 	* Removed getopt.c, getopt.h and getopt1.c from the src/argp
 	directory. 
@@ -227,7 +231,7 @@
 	* argp-parse.c (match_option, ARGP_COMPLETE): #if:ed out
 	completion code for long options.
 
-2000-11-30  Niels Möller  <nisse@cuckoo.localdomain>
+2000-11-30  Niels MÃ¶ller  <nisse@cuckoo.localdomain>
 
 	* argp-parse.c (match_option): Better abbreviations.
 	Replaced try_getopt with args_only, changed calling convention for
@@ -239,7 +243,7 @@
 
 	* argp-parse.c (calc_sizes): Updated comment.
 
-2000-11-29  Niels Möller  <nisse@cuckoo.localdomain>
+2000-11-29  Niels MÃ¶ller  <nisse@cuckoo.localdomain>
 
 	* configure.in: Use AC_REPLACE_FUNCS for mempcpy, strndup
 	and strchrnul.
@@ -270,7 +274,7 @@
 	* strndup.c, strchrnul.c mempcpy.c:
 	Moved replacement functions to separate files.
 
-2000-11-28  Niels Möller  <nisse@cuckoo.localdomain>
+2000-11-28  Niels MÃ¶ller  <nisse@cuckoo.localdomain>
 
 	* argp-parse.c: Deleted getopt-related code.
 	(struct parser): New field nextchar. Deleted fields try_getotp and long_opts.
@@ -286,12 +290,12 @@
 	(classify_arg): New function.
 	(parser_parse_next): Don't use getopt_long().
 
-2000-11-27  Niels Möller  <nisse@cuckoo.localdomain>
+2000-11-27  Niels MÃ¶ller  <nisse@cuckoo.localdomain>
 
 	* argp-help.c (argp_doc): Use the name strndup, not
 	__strndup. That probably breaks glibc builds.
 
-2000-11-27  Niels Möller  <nisse@lysator.liu.se>
+2000-11-27  Niels MÃ¶ller  <nisse@lysator.liu.se>
 
 	* argp-test.c (asprintf): Bug fix.
 
@@ -317,7 +321,7 @@
 	* src/argp: Added getopt.h, getopt.c and getopt1.c, which are
 	needed for separate compilation of argp.
 
-2000-11-27  Niels Möller  <nisse@cuckoo.localdomain>
+2000-11-27  Niels MÃ¶ller  <nisse@cuckoo.localdomain>
 
 	* Updated argp from glibc-2.2.
 
